packages/deployer/src/deployment-actions/kubectl-action/k8s-branch-deployment/testdata/expected/kube.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myservice-deployment-new-branch
  labels:
    ttl-hours: '66'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myservice-pod-new-branch
        environment: dev
        origin: new-branch
    spec:
      containers:
        - name: myservice-pod-new-branch
          image: DOCKER_IMAGE
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 4
            failureThreshold: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 4
          ports:
            - containerPort: 80
              name: httpport
---
apiVersion: v1
kind: Service
metadata:
  name: myservice-new-branch
  labels:
    name: myservice-new-branch
    environment: dev
    ttl-hours: '66'
spec:
  ports:
    - port: 80
      name: serviceport
      targetPort: 80
      protocol: TCP
  selector:
    app: myservice-pod-new-branch
    origin: new-branch
    environment: dev
  sessionAffinity: ClientIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myservice-http-ingress-new-branch
  labels:
    ttl-hours: '66'
spec:
  rules:
    - host: new-branch-myservice.dev.domain.com
      http:
        paths:
          - backend:
              serviceName: myservice-http-new-branch
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myservice-ingress-new-branch
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
  labels:
    ttl-hours: '66'
spec:
  rules:
    - host: new-branch-myservice.dev.domain.com
      http:
        paths:
          - backend:
              serviceName: myservice-new-branch
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myservice-path-ingress-new-branch
  namespace: default
  labels:
    app: myservice-new-branch
    ttl-hours: '66'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: api.dev.domain.com
      http:
        paths:
          - path: /myservice-new-branch
            backend:
              serviceName: myservice-new-branch
              servicePort: 80
  tls:
    - hosts:
        - api.dev.domain.com
      secretName: services-cert
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myservice-path-ingress-2-new-branch
  namespace: default
  labels:
    app: myservice-new-branch
    ttl-hours: '66'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: api.dev.domain.com
      http:
        paths:
          - path: myservice/test-new-branch
            backend:
              serviceName: myservice-new-branch
              servicePort: 80
  tls:
    - hosts:
        - api.dev.domain.com
      secretName: services-cert
